--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "circles.js"]
 	path = circles.js
 	url = https://github.com/EricHanLiu/circles.js
+[submodule "whatsmydrink"]
+	path = whatsmydrink
+	url = https://github.com/EricHanLiu/whatsmydrink.git
